--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="./path/to/favicon.ico" type="image/x-icon" />
   <title>GITHUB page</title>
+	<meta name="description" content="some descr"/>
+  <meta name="keywords" content="some keywords"/>
+
+  <!-- TODO? <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
   <script type="module" src="app.js"></script>
   
